# x402-nockchain

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/x402-advertiser/: Cargo.toml
crates/x402-advertiser/src/: lib.rs
crates/x402-client/: Cargo.toml
crates/x402-client/src/: lib.rs
crates/x402-mcp/: Cargo.toml
crates/x402-mcp/src/: lib.rs
crates/x402-nockchain-crypto/: Cargo.toml
crates/x402-nockchain-crypto/src/: lib.rs
crates/x402-nockchain-facilitator/: Cargo.toml
crates/x402-nockchain-facilitator/src/: lib.rs
crates/x402-types/: Cargo.toml
crates/x402-types/src/: bazaar.rs  lib.rs  nockchain.rs  payment.rs  siwn.rs
docs/decisions/: 0001-crate-topology.md  0002-naming-convention.md  0003-repo-structure.md  0004-nockchain-git-dep.md  0005-sqlite-first-storage.md  0006-ecosystem-alignment.md
docs/specs-snapshot/: 05-payload.md  06-facilitator.md  08-agentic.md  11-extensions.md  bazaar.md
examples/e2e_demo/: Cargo.toml
examples/e2e_demo/src/: main.rs
