[package]
name = "x402-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Client-side helpers for the x402 protocol: 402 parsing, PaymentPayload construction, BazaarClient for /discovery/resources, and the Signer trait that lets network adapters plug in."

[dependencies]
x402-types = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
