[package]
name = "x402-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "MCP adapter for x402: wraps a tool registry and emits 402 responses with bazaar extension blocks for unpaid tool calls."

[dependencies]
x402-types = { workspace = true }
x402-advertiser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
