[package]
name = "x402-nockchain-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Nockchain-bound cryptographic primitives for x402: Schnorr-over-Cheetah signing/verification, Tip5 domain separators, SIWN (CAIP-122). Thin wrapper over `nockchain-math`. Implements `x402-client::Signer`."

[dependencies]
x402-types = { workspace = true }
x402-client = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
