[package]
name = "e2e_demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "End-to-end demo: stub x402 facilitator + Bazaar advertiser + BazaarClient round trip."

[[bin]]
name = "e2e_demo"
path = "src/main.rs"

[dependencies]
x402-types = { workspace = true }
x402-advertiser = { workspace = true }
x402-client = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
